--- a/pages/apply/course/background-sound-list/background-sound-list.wxss
+++ b/pages/apply/course/background-sound-list/background-sound-list.wxss
@@ -1,10 +1,7 @@
-page {
-  font-size: 32rpx;
-}
 .bs-tab{
-  display: flex; flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
-.bs-tab-box{}
 .bs-tab-single-box{
   white-space:nowrap;
   padding: 30rpx 0;
@@ -18,10 +15,19 @@ page {
   font-size: 32rpx;
 }
 .bs-tab-single-box text.active{
-  color: #733429; position: relative;
+  color: #733429;
+  position: relative;
 }
 .bs-tab-single-box text.active::after{
-  content: ""; position: absolute; left: 50%; transform: translateX(-50%); bottom: -6rpx; height: 6rpx; width: 30%; background-color: #733429; border-radius: 100rpx;
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -6rpx;
+  height: 6rpx;
+  width: 30%;
+  background-color: #733429;
+  border-radius: 100rpx;
 }
 
 
@@ -31,7 +37,11 @@ page {
   flex-wrap: wrap;
 }
 .bs-con .nodata{
-  font-size: 24rpx; color: #999999; text-align: center; flex: 1; padding-top: 40rpx;
+  font-size: 24rpx;
+  color: #999999;
+  text-align: center;
+  flex: 1;
+  padding-top: 40rpx;
 }
 /***************/
 .bs-single{
@@ -44,7 +54,9 @@ page {
   margin-left: 100rpx;
 }
 .bs-single>._insert{
-  padding: 25rpx 25rpx; display: inline-block; position: relative;
+  padding: 25rpx 25rpx;
+  display: inline-block;
+  position: relative;
 }
 .bs-single ._image{
   display: inline-block;
@@ -53,26 +65,50 @@ page {
   border-left: 12rpx solid #000;
 }
 .bs-single ._image::after{
-  position: absolute; content: ""; z-index: -2; background-image: -webkit-linear-gradient(top, black, #7b7b7b, black);
-  border-radius: 500rpx; width: 150rpx; height: 150rpx; right: -40rpx; top: 15rpx; box-shadow: 28rpx 26rpx 22rpx -25rpx rgba(0, 0, 0, 0.2);
+  position: absolute;
+  content: "";
+  z-index: -2;
+  background-image: -webkit-linear-gradient(top, black, #7b7b7b, black);
+  border-radius: 500rpx;
+  width: 150rpx;
+  height: 150rpx;
+  right: -40rpx;
+  top: 15rpx;
+  box-shadow: 28rpx 26rpx 22rpx -25rpx rgba(0, 0, 0, 0.2);
   transition: right 0.5s;
 }
 .bs-single ._image::before{
-  position: absolute; content: ""; z-index: -1; background-image: -webkit-linear-gradient(top, #733429, #c15745, #733429);
-  border-radius: 500rpx; width: 75rpx; height: 75rpx; right: -12rpx; top: 52.5rpx;
+  position: absolute;
+  content: ""; z-index: -1;
+  background-image: -webkit-linear-gradient(top, #733429, #c15745, #733429);
+  border-radius: 500rpx;
+  width: 75rpx;
+  height: 75rpx;
+  right: -12rpx;
+  top: 52.5rpx;
   box-shadow: 0 0 4rpx rgba(0, 0, 0, 0.3);
   transition: right 0.5s;
 }
 
 .bs-single ._image>view{
-  position: relative; padding: 0; display: inline-block; box-shadow: 0 16rpx 20rpx -8rpx rgba(0, 0, 0, 0.2);
+  position: relative;
+  padding: 0;
+  display: inline-block;
+  box-shadow: 0 16rpx 20rpx -8rpx rgba(0, 0, 0, 0.2);
 }
 .bs-single ._image>view::after,.bs-single ._image>view::before{
-  position: absolute; content: ""; width: 1rpx; background-color: #eaeaea;
-  height: 100%; left: 0rpx; top: 0; z-index: 1;
+  position: absolute;
+  content: "";
+  width: 1rpx;
+  background-color: #eaeaea;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 1;
 }
 .bs-single ._image>view::before{
-  left: auto; right: 0rpx;
+  left: auto;
+  right: 0;
 }
 .bs-single ._image image{
   width: 180rpx;
@@ -84,7 +120,8 @@ page {
   right: -60rpx;
 }
 .bs-single ._image.active::before{
-  right: -28rpx; box-shadow: none;
+  right: -28rpx;
+  box-shadow: none;
 }
 .bs-single ._image.active::after, .bs-single ._image.active::before{
   -webkit-animation:tryRotate 20s linear forwards infinite;
@@ -138,11 +175,9 @@ page {
 .bs-single.active>._insert{
   background-color: #eae1df;
 }
-
 .bs-single.active ._name,.bs-single.active ._like{
   background-color: #eae1df;
 }
-
 .bs-single ._recommend{
   position: absolute;
   z-index: 10;
